# silver-storage

./: Cargo.toml  README.md
examples/: paritydb_demo.rs
src/: address_store.rs  advanced_indexing.rs  attributes.rs  block_store.rs  cache.rs  db.rs  db_production.rs  error.rs  event_store.rs  event_store_persistent.rs  fee_store.rs  lib.rs  mempool_store.rs  mining_store.rs  network_store.rs  object_store.rs  ownership.rs  recovery.rs  snapshot_store.rs  staking_store.rs  token_store.rs  token_store_persistent.rs  transaction_store.rs  utxo_store.rs  validator_store.rs  wallet_store.rs
src/persistence/: atomic_batch.rs  db.rs  errors.rs  flush.rs  genesis.rs  keys.rs  mod.rs  models.rs  recovery.rs  shutdown.rs  snapshots.rs  traits.rs  transactions.rs  validator_state.rs
tests/: integration_tests.rs  mining_store_integration_tests.rs
